@@ -17,6 +17,7 @@
 
 package org.apache.solr.prometheus.exporter;
 
+import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
@@ -28,37 +29,43 @@ import org.apache.zookeeper.client.ConnectStringParser;
 
 public class SolrClientFactory {
 
-  private PrometheusExporterSettings settings;
+  private final PrometheusExporterSettings settings;
+  private final SolrScrapeConfiguration configuration;
 
-  public SolrClientFactory(PrometheusExporterSettings settings) {
+  public SolrClientFactory(
+      PrometheusExporterSettings settings, SolrScrapeConfiguration configuration) {
     this.settings = settings;
+    this.configuration = configuration;
   }
 
-  public Http2SolrClient createStandaloneSolrClient(String solrHost) {
-    Http2SolrClient http2SolrClient =
+  private static Http2SolrClient.Builder newHttp2SolrClientBuilder(
+      String solrHost, PrometheusExporterSettings settings, SolrScrapeConfiguration configuration) {
+    var builder =
         new Http2SolrClient.Builder(solrHost)
             .withIdleTimeout(settings.getHttpReadTimeout(), TimeUnit.MILLISECONDS)
             .withConnectionTimeout(settings.getHttpConnectionTimeout(), TimeUnit.MILLISECONDS)
-            .withResponseParser(new NoOpResponseParser("json"))
-            .build();
+            .withResponseParser(new NoOpResponseParser("json"));
+    if (configuration.getBasicAuthUser() != null) {
+      builder.withBasicAuthCredentials(
+          configuration.getBasicAuthUser(), configuration.getBasicAuthPwd());
+    }
+    return builder;
+  }
 
-    return http2SolrClient;
+  public Http2SolrClient createStandaloneSolrClient(String solrHost) {
+    return newHttp2SolrClientBuilder(solrHost, settings, configuration).build();
   }
 
   public CloudSolrClient createCloudSolrClient(String zookeeperConnectionString) {
     ConnectStringParser parser = new ConnectStringParser(zookeeperConnectionString);
 
+    List<String> zkHosts =
+        parser.getServerAddresses().stream()
+            .map(address -> address.getHostString() + ":" + address.getPort())
+            .collect(Collectors.toList());
     CloudSolrClient client =
-        new CloudHttp2SolrClient.Builder(
-                parser.getServerAddresses().stream()
-                    .map(address -> address.getHostString() + ":" + address.getPort())
-                    .collect(Collectors.toList()),
-                Optional.ofNullable(parser.getChrootPath()))
-            .withInternalClientBuilder(
-                new Http2SolrClient.Builder()
-                    .withIdleTimeout(settings.getHttpReadTimeout(), TimeUnit.MILLISECONDS)
-                    .withConnectionTimeout(
-                        settings.getHttpConnectionTimeout(), TimeUnit.MILLISECONDS))
+        new CloudHttp2SolrClient.Builder(zkHosts, Optional.ofNullable(parser.getChrootPath()))
+            .withInternalClientBuilder(newHttp2SolrClientBuilder(null, settings, configuration))
             .withResponseParser(new NoOpResponseParser("json"))
             .build();
 
