@@ -153,6 +153,8 @@ Bug Fixes
 
 * SOLR-16997: OTEL configurator NPE when SOLR_HOST not set (janhoy)
 
+* SOLR-16980: Connect to SOLR standalone with basic authentication (Alex Deparvu)
+
 Dependency Upgrades
 ---------------------
 
